Fixed table size on smaller devices

--- a/cia-view/src/main/resources/public/styles/main.css
+++ b/cia-view/src/main/resources/public/styles/main.css
@@ -318,6 +318,11 @@ a:visited
 }
 
 @media (max-width: 1024px) {
+    .ranked-table
+    {
+        width: 80%;
+    }
+
     .rank-image-container
     {
         width: 32px;
@@ -335,7 +340,7 @@ a:visited
         margin-left: 1em;
         line-height: 32px;
         font-weight: bold;
-        font-size: 14px;
+        font-size: 12px;
     }
 
     .rank-number
